--- a/package.json
+++ b/package.json
@@ -26,13 +26,23 @@
     "@angular-devkit/build-angular": "^17.3.8",
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.3.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "@types/jest": "29.5.14",
+    "jest": "29.7.0",
+		"jest-preset-angular": "14.2.4",
+		"ts-jest": "29.2.5",
     "typescript": "~5.4.2"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+		"setupFilesAfterEnv": [
+			"<rootDir>/setup-jest.ts"
+		],
+		"globalSetup": "jest-preset-angular/global-setup",
+    "moduleNameMapper": {
+			"^@atoms/(.*)$": "<rootDir>/src/app/shared/components/atoms/$1",
+			"^@molecules/(.*)$": "<rootDir>/src/app/shared/components/molecules/$1",
+			"^@organisms/(.*)$": "<rootDir>/src/app/shared/components/organisms/$1",
+			"^@pages/(.*)$": "<rootDir>/src/app/shared/pages/$1"
+		}
   }
 }
